# wxWidgit-dj

./: .dj.cpp.swp  CMakeLists.txt  dj.cpp  main.cpp  readme.txt
src/: CMakeLists.txt  myFrame.cpp  myFrame.h
test/: dj.cpp
